--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "react-router": "^2.0.0-rc5",
+    "redux": "^3.0.4",
+    "redux-form": "^4.1.3",
+    "redux-persist": "^4.0.0-alpha5",
+    "redux-promise": "^0.5.3"
   }
 }
